# relearn

./: .env  Dockerfile  das.txt  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
backend/apps/books/: models.py  serializers.py  urls.py  views.py
backend/apps/books/migrations/: 0001_initial.py
backend/configs/: settings.py  urls.py
backend/configs/extra_configs/: __init__.py  rest_config.py
client/: asset-manifest.json  index.html
client/static/js/: main.298c7890.js  main.298c7890.js.map  main.743a4609.js  main.743a4609.js.map  main.d2be6f80.js  main.d2be6f80.js.map  main.d5ef1898.js  main.d5ef1898.js.map  main.fec43180.js  main.fec43180.js.map
frontend/: .eslintrc.json  package-lock.json  package.json
frontend/src/: index.tsx
frontend/src/components/Book/: BookComponent.tsx  BookForm.tsx  Books.tsx
frontend/src/constants/: urls.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: BooksPage.tsx
frontend/src/redux/: store.ts
frontend/src/redux/slices/: bookSlice.tsx
frontend/src/router/: router.tsx
frontend/src/services/: apiService.ts  bookService.ts
frontend/src/types/: bookType.ts
